header image commit

--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -15,16 +15,19 @@
 
 <body width="device-width">
     <section>
-        <div id="header">
+       <!-- <div id="header">
            <div class="container center">
            <div class="row">
             <img src="images/resort.jpg" alt="Exclusive Resort for Sweepstakes" class=".img-responsive" />
             <h1>Win a vacation<br>at this exclusive resort</h1>
         </div>
         </div>
-        </div>
+        </div>-->
 
         <div class="blue-wrapper container">
+            <div class="header"></div>
+            <h1>Win a vacation<br>at this exclusive resort</h1>
+        
            <div class="row">
             <div class="white-wrapper">
                 <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat tortor ex, et ornare augue laoreet ac. Sed non ligula arcu. Phasellus pellentesque, lorem in bibendum facilisis, tellus elit porta odio, in commodo lorem dolor vitae neque. Vivamus gravida tincidunt consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis at neque a lacus vulputate bibendum. Pellentesque a tellus molestie, bibendum quam nec, cursus nulla. Duis a mauris ut felis porta sollicitudin at id odio. Etiam at ex orci.</p>
