mobile and large desktop responsive

--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -15,99 +15,95 @@
 
 <body width="device-width">
     <section>
-       <!-- <div id="header">
+        <div id="header">
            <div class="container center">
            <div class="row">
             <img src="images/resort.jpg" alt="Exclusive Resort for Sweepstakes" class=".img-responsive" />
             <h1>Win a vacation<br>at this exclusive resort</h1>
         </div>
         </div>
-        </div>-->
+        </div>
 
         <div class="blue-wrapper container">
-            <div class="header">
-            <h1>Win a vacation<br>at this exclusive resort</h1>
-            </div>
-        
-           <div class="row">
-            <div class="white-wrapper">
-                <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat tortor ex, et ornare augue laoreet ac. Sed non ligula arcu. Phasellus pellentesque, lorem in bibendum facilisis, tellus elit porta odio, in commodo lorem dolor vitae neque. Vivamus gravida tincidunt consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis at neque a lacus vulputate bibendum. Pellentesque a tellus molestie, bibendum quam nec, cursus nulla. Duis a mauris ut felis porta sollicitudin at id odio. Etiam at ex orci.</p>
+            <div class="row">
+                <div class="white-wrapper">
+                    <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat tortor ex, et ornare augue laoreet ac. Sed non ligula arcu. Phasellus pellentesque, lorem in bibendum facilisis, tellus elit porta odio, in commodo lorem dolor vitae neque. Vivamus gravida tincidunt consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis at neque a lacus vulputate bibendum. Pellentesque a tellus molestie, bibendum quam nec, cursus nulla. Duis a mauris ut felis porta sollicitudin at id odio. Etiam at ex orci.</p>
 
-                <p class="intro-text">Pellentesque sit amet auctor ante. Suspendisse id laoreet ligula, in ornare metus. Phasellus in condimentum diam. Sed sit amet molestie justo, at pellentesque ligula. Mauris egestas posuere justo, vitae scelerisque neque lacinia quis. Maecenas arcu elit, maximus a porta at, mattis vulputate velit. Nam at euismod erat. Aliquam sollicitudin rutrum libero, non vehicula lacus mattis posuere. Nulla nisi felis, porttitor vel maximus et, condimentum id nisl. Vivamus congue sit amet nisl quis condimentum. Aliquam erat volutpat. Pellentesque varius dolor tempor justo malesuada consectetur.</p>
+                    <p class="intro-text">Pellentesque sit amet auctor ante. Suspendisse id laoreet ligula, in ornare metus. Phasellus in condimentum diam. Sed sit amet molestie justo, at pellentesque ligula. Mauris egestas posuere justo, vitae scelerisque neque lacinia quis. Maecenas arcu elit, maximus a porta at, mattis vulputate velit. Nam at euismod erat. Aliquam sollicitudin rutrum libero, non vehicula lacus mattis posuere. Nulla nisi felis, porttitor vel maximus et, condimentum id nisl. Vivamus congue sit amet nisl quis condimentum. Aliquam erat volutpat. Pellentesque varius dolor tempor justo malesuada consectetur.</p>
 
-                <div class="lightblue-banner">
-                    <h2 class="upper-slogan">You could win a 3-night trip for two to experience it all for yourself, including:</h2>
-                </div>
-
-                <div class="features-list">
-                    <ul id="features">
-                        <li>
-                            <img src="icons/Airfare.png" class="icon" alt="Icon of airplane" /> Roundtrip airfare to Orlando, Florida</li>
-
-                        <li><img src="icons/Ground%20Transportation.png" class="icon" alt="Icon of cars" />Ground transportation between airport and hotel in Orlando</li>
-                        <li><img src="icons/Park_Admission.png" class="icon" alt="Icon of admission" />Admission to both theme parks</li>
-                        <li><img src="icons/Accomodations.png" class="icon" alt="Icon of accomodations" />Accommodations on-site at the Beach Resort</li>
-                        <li><img src="icons/Tickets%20to%20BMG.png" class="icon" alt="Icon of ticket" />Tickets to a live-event</li>
-                        <li><img src="icons/Wet%20'N%20Wild%20Admission.png" class="icon" alt="Icon of snorkeling" />Admission to the waterpark</li>
-                        <li><img src="icons/Grill%20&%20Brew.png" class="icon" alt="Icon of beer" />Plus, you'll attend the Grand Opening of the Sports Grill*</li>
-                    </ul>
-                </div>
-                <div class="more-info-link">
-                    <h3 class="text-center">For more information on universal orlando resort and for great deals on vacation packages, visit <a href>vacationpackages.com!</a></h3></div>
-
-                <div class="darkblue-banner">
-                    <h2 class="lower-slogan">Enter here for a chance to win!</h2>
-                </div>
-                
-                <div class="container form-column">
-  <form id="register-form" class="form-inline" method='post' action='sweepstakes.html'>
-               <div class="form-group two-col">
-       <label for="firstname">First Name</label>
-       <input type="text" class="form-control" name="firstName">
-     </div>
-     <div class="form-group two-col">
-       <label for="lastname">Last Name</label>
-       <input type="text" class="form-control" name="lastName">
-     </div>
-               <div class="form-group two-col">
-       <label for="email">Email</label>
-       <input type="email" class="form-control" name="email">
-     </div>
-     <div class="form-group two-col">
-       <label for="dob">Date of Birth</label>
-       <input type="text" class="form-control" name="birth" placeholder="MM/DD/YYYY">
-     </div>
-                   <div class="form-group two-col">
-       <label for="zipcode">Zip Code</label>
-       <input type="text" class="form-control" name="zip">
-     </div>
-                   <div class="form-group two-col btn-group">
-       <label for="provider">Cable/Satellite Provider</label>
-        <select id="provider" name="provider" class="form-control-lg" required>
-              <option value=""></option>
-             <option value="1">Time Warner</option>
-             <option value="2">DIRECTV</option>
-                 <option value="3">Dish Network</option>
-                                </select>
-                 </div>
-                </div>  
-                <div class="offers-check form-group col-md-12">
-                   <div class="checkbox">
-                    <label>
-                    <input type="checkbox" class="form-check-input" id="specialOffers" name="terms" value="yes" /> Yes, I would like to receive news and special offers from the resort!</label>
-                    <a class="privacy" href>PRIVACY POLICY</a>
-                </div>
+                    <div class="lightblue-banner">
+                        <h2 class="upper-slogan">You could win a 3-night trip for two to experience it all for yourself, including:</h2>
                     </div>
 
-                <input class="button-submit" id="submit-button" type="submit" value="Submit">
+                    <div class="features-list">
+                        <ul id="features">
+                            <li>
+                                <img src="icons/Airfare.png" class="icon" alt="Icon of airplane" /> Roundtrip airfare to Orlando, Florida</li>
+
+                            <li><img src="icons/Ground%20Transportation.png" class="icon" alt="Icon of cars" />Ground transportation between airport and hotel in Orlando</li>
+                            <li><img src="icons/Park_Admission.png" class="icon" alt="Icon of admission" />Admission to both theme parks</li>
+                            <li><img src="icons/Accomodations.png" class="icon" alt="Icon of accomodations" />Accommodations on-site at the Beach Resort</li>
+                            <li><img src="icons/Tickets%20to%20BMG.png" class="icon" alt="Icon of ticket" />Tickets to a live-event</li>
+                            <li><img src="icons/Wet%20'N%20Wild%20Admission.png" class="icon" alt="Icon of snorkeling" />Admission to the waterpark</li>
+                            <li><img src="icons/Grill%20&%20Brew.png" class="icon" alt="Icon of beer" />Plus, you'll attend the Grand Opening of the Sports Grill*</li>
+                        </ul>
+                    </div>
+                    <div class="more-info-link">
+                        <h3 class="text-center">For more information on universal orlando resort and for great deals on vacation packages, visit <a href>vacationpackages.com!</a></h3></div>
+
+                    <div class="darkblue-banner">
+                        <h2 class="lower-slogan">Enter here for a chance to win!</h2>
+                    </div>
+
+                    <div class="container form-column">
+                        <form id="register-form" class="form-inline" method='post' action='sweepstakes.html'>
+                            <div class="form-group two-col">
+                                <label for="firstname">First Name</label>
+                                <input type="text" class="form-control" name="firstName">
+                            </div>
+                            <div class="form-group two-col">
+                                <label for="lastname">Last Name</label>
+                                <input type="text" class="form-control" name="lastName">
+                            </div>
+                            <div class="form-group two-col">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" name="email">
+                            </div>
+                            <div class="form-group two-col">
+                                <label for="dob">Date of Birth</label>
+                                <input type="text" class="form-control" name="birth" placeholder="MM/DD/YYYY">
+                            </div>
+                            <div class="form-group two-col">
+                                <label for="zipcode">Zip Code</label>
+                                <input type="text" class="form-control" name="zip">
+                            </div>
+                            <div class="form-group two-col btn-group">
+                                <label for="provider">Cable/Satellite Provider</label>
+                                <select id="provider" name="provider" class="form-control-lg" required>
+                                    <option value=""></option>
+                                    <option value="1">Time Warner</option>
+                                    <option value="2">DIRECTV</option>
+                                    <option value="3">Dish Network</option>
+                                </select>
+                            </div>
+                    </div>
+                    <div class="offers-check form-group col-md-12">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" class="form-check-input" id="specialOffers" name="terms" value="yes" /> Yes, I would like to receive news and special offers from the resort!</label>
+                            <a class="privacy" href>PRIVACY POLICY</a>
+                        </div>
+                    </div>
+
+                    <input class="button-submit" id="submit-button" type="submit" value="Submit">
                     </form>
+                </div>
+                <!----- Close whiteBox -------->
+                <footer class="fine-print">
+                    <p class="text-center text-white">*Winners must be able to travel during the Grand Opening of the resort and will be notified October 2015 of the exact dates of travel.</p>
+                    <p class="text-center text-white">Curabitur urna tortor, efficitur in rutrum vestibulum, pretium non enim. Vestibulum orci ante, tincidunt ac vestibulum a, rhoncus vitae ex. Proin aliquet nunc orci, efficitur euismod purus pellentesque eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a aliquet magna. Aliquam vel mauris ut est suscipit lacinia vitae in tortor. Integer dignissim metus sed diam blandit cursus.</p>
+                </footer>
             </div>
-            <!----- Close whiteBox -------->
-            <footer class="fine-print">
-                <p class="text-center text-white">*Winners must be able to travel during the Grand Opening of the resort and will be notified October 2015 of the exact dates of travel.</p>
-                <p class="text-center text-white">Curabitur urna tortor, efficitur in rutrum vestibulum, pretium non enim. Vestibulum orci ante, tincidunt ac vestibulum a, rhoncus vitae ex. Proin aliquet nunc orci, efficitur euismod purus pellentesque eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a aliquet magna. Aliquam vel mauris ut est suscipit lacinia vitae in tortor. Integer dignissim metus sed diam blandit cursus.</p>
-            </footer>
-        </div>
         </div>
     </section>
 
