stacked mobile form

--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -56,37 +56,59 @@
                             </div>
 
                             <div class="container form-column">
+                               <div class="row">
                                 <form id="register-form" class="form-inline" method='post' action='sweepstakes.html'>
-                                    <div class="form-group two-col">
+                                   <div class="col-md-12">
+                                    <div class="form-group">
+                                       <div class="col-sm-12 col-md-6 col-lg-12">
                                         <label for="firstname">First Name</label>
                                         <input type="text" class="form-control" name="firstName">
                                     </div>
-                                    <div class="form-group two-col">
+                                        </div>
+                                    <div class="form-group">
+                                       <div class="col-sm-12 col-md-6 col-lg-12">
                                         <label for="lastname">Last Name</label>
                                         <input type="text" class="form-control" name="lastName">
+                                        </div>
+                                        </div>
                                     </div>
-                                    <div class="form-group two-col">
+                                    
+                                    <div class="col-md-12">
+                                    <div class="form-group">
+                                       <div class="col-sm-12 col-md-6 col-lg-12">
                                         <label for="email">Email</label>
                                         <input type="email" class="form-control" name="email">
                                     </div>
-                                    <div class="form-group two-col">
+                                        </div>
+                                    <div class="form-group">
+                                       <div class="col-sm-12 col-md-6 col-lg-12">
                                         <label for="dob">Date of Birth</label>
                                         <input type="text" class="form-control" name="birth" placeholder="MM/DD/YYYY">
+                                        </div>
+                                        </div>
                                     </div>
-                                    <div class="form-group two-col">
+                                    
+                                    <div class="col-md-12">
+                                    <div class="form-group">
+                                       <div class="col-sm-12 col-md-6 col-lg-12">
                                         <label for="zipcode">Zip Code</label>
                                         <input type="text" class="form-control" name="zip">
                                     </div>
-                                    <div class="form-group two-col btn-group">
+                                        </div>
+                                    <div class="form-group btn-group">
+                                       <div class="col-sm-12 col-md-6 col-lg-12">
                                         <label for="provider">Cable/Satellite Provider</label>
-                                        <select id="provider" name="provider" class="form-control-lg" type="dropdown">
+                                        <select id="provider" name="provider" class="form-control" type="dropdown">
                                             <option value=""></option>
                                             <option value="1">Time Warner</option>
                                             <option value="2">DIRECTV</option>
                                             <option value="3">Dish Network</option>
                                         </select>
                                     </div>
+                                    </div>
                             </div>
+                            </div>
+                                </div>
 
                             <div class="offers-check form-group col-md-12">
                                 <div class="checkbox">
@@ -100,8 +122,7 @@
                             </div>
 
                             </form>
-                        </div>
-                        <!----- Close white-wrapper -------->
+                        </div>  <!----- Close white-wrapper -------->
 
                         <div id="footer" class="fine-print">
                             <p class="text-center text-white">*Winners must be able to travel during the Grand Opening of the resort and will be notified October 2015 of the exact dates of travel.</p>
